# molecularGSM

./: .travis.yml  Makefile  ProjectName.cmake  meson.build  meson_options.txt
GSM/: ase.cpp  bmat.cpp  gaussian.cpp  grad.cpp  gstring.cpp  icoord.cpp  knnr.cpp  meson.build  molpro.cpp  mopac.cpp  orca.cpp  qchem.cpp  qchemsf.cpp
meson/: meson.build
